--- a/ex1/index.html
+++ b/ex1/index.html
@@ -25,8 +25,8 @@
 </a>
 </p>
       <p>
- <a href="http://math.tkk.fi/cms-style/style2013/img/sci/aalto-logo-en-2.gif">
-<img border="0" alt="Aalto homepage" src="http://users.ics.aalto.fi/talonen/">
+ <a href="http://users.ics.aalto.fi/talonen/">
+<img border="0" alt="Aalto homepage" src="http://math.tkk.fi/cms-style/style2013/img/sci/aalto-logo-en-2.gif">
 </a>
 </p>	
       
